# hhc-n8i8op

./: .gitignore  LICENSE  README.md  SPECIFICATION.md  hacs.json  pyproject.toml
custom_components/hhc_n8i8op/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  hhc_protocol.py  light.py  manifest.json  services.yaml  strings.json  switch.py
custom_components/hhc_n8i8op/hhc_protocol/: __init__.py  __main__.py  _discovery.py  _udp_helpers.py  client.py  config.py  relay.py
custom_components/hhc_n8i8op/translations/: en.json  ru.json
docs/: PROTOCOL_SPEC.md
tests/: test_hhc_protocol.py
